wip: working on documentation

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,12 @@
 import Bleed from 'nextra-theme-docs/bleed'
 
-# Nextra
+# TON Dev
 
-**Nextra** is a [Next.js](https://nextjs.org) based static site generator.
+**tondev.org** is a community-lead collection of documentation about development for TON blockchain.
 
-It supports Markdown and React components ([MDX](/features/mdx)), automatically generated [sidebar and anchor links](/get-started#sidebar-and-anchor-links), file-system based routing, built-in syntax highlighting, image optimization, custom layouts, i18n, and all the features you love about Next.js.
+[TON](https://ton.org) is a fully decentralized layer-1 blockchain designed by [Telegram](https://telegram.org) to onboard billions of users. 
+It boasts ultra-fast transactions, tiny fees, easy-to-use apps, and is environmentally friendly.
 
-Here's what you will get in 1 minute:
+### Community
 
-<Bleed>![Nextra Example](../public/demo.png)</Bleed>
+* [TON Dev Telegram Chat](https://t.me/tondev_eng)
